--- a/about.html
+++ b/about.html
@@ -4,7 +4,9 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>about</title>
+   <meta name="description" content="Affordable modern website development.">
+   <link rel="icon" href="./images/logo.svg">
+   <title>WebProfessor</title>
 
    
    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
@@ -70,6 +72,7 @@
       <h3>Why Choose Us?</h3>
       <p>Thank you for considering the Web Professor for your web & app development needs. With our skills, experience and passion for building websites and web-based applications that are intuitive, user-friendly, and tailored to the needs of our clients, we are sure we can deliver.</p>
       <p>We have a proven track record of delivering high-quality, reliable, and cost-effective solutions to our clients. We are dedicated to staying up-to-date with the latest technologies and to providing exceptional customer service every step of the way.</p>
+      <a href="https://sahdif-internship.vercel.app/" class="btn">Visit this website</a>
       <div class="icons-container">
          <div class="icons">
             <i class="fa-solid fa-star"></i>
@@ -88,7 +91,7 @@
       
    </div>
    <div class="content">
-
+      
    <p>When you choose us, you can trust that your website or application will be in the hands of a team of experts who are committed to helping you achieve your goals. We look forward to the opportunity to work with you and bring your vision to life online.</p>
 
    </div>
@@ -206,7 +209,7 @@
 
       <div class="box">
          <h3>Follow Us</h3>
-         <a href="#"> <i class="fab fa-facebook-f"></i> Facebook </a>
+         <a href="https://www.facebook.com/profile.php?id=100089201558335&mibextid=LQQJ4d"> <i class="fab fa-facebook-f"></i> Facebook </a>
          <a href="#"> <i class="fab fa-twitter"></i> Twitter </a>
          <a href="#"> <i class="fab fa-instagram"></i> Instagram </a>
          <a href="#"> <i class="fab fa-linkedin"></i> Linkedin </a>
