--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,9 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>book</title>
+   <meta name="description" content="Affordable modern website development.">
+   <link rel="icon" href="./images/logo.svg">
+   <title>WebProfessor - Contact</title>
 
 
    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
@@ -16,7 +18,7 @@
    <link rel="stylesheet" href="css/style.css">
 
 
-   <script type="text/javascript"
+<script type="text/javascript"
    src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
 </script>
 <script type="text/javascript">
@@ -123,7 +125,7 @@
 
       <div class="box">
          <h3>Follow Us</h3>
-         <a href="#"> <i class="fab fa-facebook-f"></i> Facebook </a>
+         <a href="https://www.facebook.com/profile.php?id=100089201558335&mibextid=LQQJ4d"> <i class="fab fa-facebook-f"></i> Facebook </a>
          <a href="#"> <i class="fab fa-twitter"></i> Twitter </a>
          <a href="#"> <i class="fab fa-instagram"></i> Instagram </a>
          <a href="#"> <i class="fab fa-linkedin"></i> Linkedin </a>
