--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>home</title>
+   <meta name="description" content="Affordable modern website development.">
+   <link rel="icon" href="./images/logo.svg">
+   <title>WebProfessor</title>
 
 
    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
@@ -127,7 +129,7 @@
       <a href="services.html">
       <div class="box">
          <img src="images/design-home.svg" alt="">
-         <h3>Graphic Design</h3>
+         <h3>Design</h3>
       </div>
       </a>
       
@@ -158,6 +160,7 @@
          your goals. Let's work together to create something great!
       </p>
       <a href="about.html" class="btn">Learn more</a>
+      <a href="https://sahdif-internship.vercel.app/" class="btn">Visit this website</a>
    </div>
 
 </section>
@@ -230,7 +233,7 @@
 
       <div class="box">
          <h3>Follow Us</h3>
-         <a href="#"> <i class="fab fa-facebook-f"></i> Facebook </a>
+         <a href="https://www.facebook.com/profile.php?id=100089201558335&mibextid=LQQJ4d"> <i class="fab fa-facebook-f"></i> Facebook </a>
          <a href="#"> <i class="fab fa-twitter"></i> Twitter </a>
          <a href="#"> <i class="fab fa-instagram"></i> Instagram </a>
          <a href="#"> <i class="fab fa-linkedin"></i> Linkedin </a>
