--- a/services.html
+++ b/services.html
@@ -4,7 +4,9 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>package</title>
+   <meta name="description" content="Affordable modern website development.">
+   <link rel="icon" href="./images/logo.svg">
+   <title>WebProfessor - Services</title>
 
 
    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
@@ -31,24 +33,24 @@
    
 
 
-<section class="header">
+   <section class="header">
 
-   <div class="logo-flex">
-
-   <a href="index.html" class="logo">Web Professor</a>
-   <img src="./images/logo.svg" width="50px">
-
-   </div>
-   <nav class="navbar">
-      <a href="home.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="package.html">Services</a>
-      <a href="contact.html">Contact Us</a>
-   </nav>
-
-   <div id="menu-btn" class="fas fa-bars"></div>
-
-</section>
+      <div class="logo-flex">
+   
+      <a href="index.html" class="logo">Web Professor</a>
+      <img src="./images/logo.svg" width="50px">
+   
+      </div>
+      <nav class="navbar">
+         <a href="index.html">Home</a>
+         <a href="about.html">About</a>
+         <a href="services.html">Services</a>
+         <a href="contact.html">Contact Us</a>
+      </nav>
+   
+      <div id="menu-btn" class="fas fa-bars"></div>
+   
+   </section>
 
 
 
@@ -142,22 +144,22 @@
 
       <div class="box">
          <h3>Quick Links</h3>
-         <a href="home.php"> <i class="fas fa-angle-right"></i> Home</a>
-         <a href="about.php"> <i class="fas fa-angle-right"></i> About</a>
-         <a href="package.php"> <i class="fas fa-angle-right"></i> Package</a>
-         <a href="contact.html"> <i class="fas fa-angle-right"></i> Book</a>
+         <a href="index.html"> <i class="fas fa-angle-right"></i> Home</a>
+         <a href="about.html"> <i class="fas fa-angle-right"></i> About</a>
+         <a href="services.html"> <i class="fas fa-angle-right"></i> Services</a>
+         <a href="contact.html"> <i class="fas fa-angle-right"></i> Contact</a>
       </div>
 
       <div class="box">
          <h3>Contact Info</h3>
-         <a href="#"> <i class="fas fa-phone"></i> 0404646323 </a>
-         <a href="#"> <i class="fas fa-envelope"></i> webprofessor@outlook.com </a>
+         <a href="tel:0404646323"> <i class="fas fa-phone"></i> 0404646323 </a>
+         <a href="mailto:webprofessor@outlook.com"> <i class="fas fa-envelope"></i> webprofessor@outlook.com </a>
          <a href="#"> <i class="fas fa-map"></i> Sydney, Australia</a>
       </div>
 
       <div class="box">
          <h3>Follow Us</h3>
-         <a href="#"> <i class="fab fa-facebook-f"></i> Facebook </a>
+         <a href="https://www.facebook.com/profile.php?id=100089201558335&mibextid=LQQJ4d"> <i class="fab fa-facebook-f"></i> Facebook </a>
          <a href="#"> <i class="fab fa-twitter"></i> Twitter </a>
          <a href="#"> <i class="fab fa-instagram"></i> Instagram </a>
          <a href="#"> <i class="fab fa-linkedin"></i> Linkedin </a>
